--- a/now.json
+++ b/now.json
@@ -1,4 +1,10 @@
 {
   "name": "timrijkse",
-  "version": 2
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@now/static-build"
+    }
+  ]
 }
